# storage/app/public/api-docs/api-docs2.json
@@ -71,7 +71,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
@@ -823,6 +828,14 @@
                 },
                 "type": "object"
             }
+        },
+        "securitySchemes": {
+            "sanctum": {
+                "type": "apiKey",
+                "description": "Enter token in format (Bearer <token>)",
+                "name": "Authorization",
+                "in": "header"
+            }
         }
     },
     "tags": [
@@ -837,6 +850,11 @@
         {
             "name": "User",
             "description": "User"
+        }
+    ],
+    "security": [
+        {
+            "sanctum": []
         }
     ]
 }
